# co-test-driver

./: .gitignore  README.md  memo.md  pyproject.toml
.github/: copilot-instractions.md
src/creators/: scenario_creator.py
src/parsers/: requirement_parser.py
src/schemas/: inputs.py  scenario.py
src/static/: vp_scenario.json
