[project]
name = "co-test-driver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exmgai",
    "fastapi>=0.136.1",
]

[tool.uv.sources]
exmgai = { git = "https://github.com/tomotaka-nagano/exmgai.git", rev = "v0.0.2" }
